Assets/akanevrc/TeuchiUdon/Tests/src/Exprs/EvalRefMethod2.teuchi
// error
x = 0;
int.TryParse("100", ref x);
UnityEngine.Debug.Log(x);
